Add builder, constructors and configuration

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,6 +8,16 @@ services:
       - "postgresql_db:database"
     ports:
       - "127.0.0.1:12345:80"
+    environment:
+      APP_PHOTO_BASE_URL: "http://localhost/static"
+      APP_PHOTO_PATH_MAIN: "/server/media"
+      APP_PHOTO_PATH_TEMP: "/server/temp"
+      DB_AUTH_NAME: "authentication"
+      DB_MAIN_NAME: "rent_market"
+      DB_HOST: "database"
+      DB_PORT: "5432"
+      DB_USER_NAME: "postgres"
+      DB_USER_PASSWORD: "postgres"
 
   postgresql_db:
     build:
