Add nginx config

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,15 @@
 
 services:
+  nginx:
+    build:
+      context: ..
+      dockerfile: ./nginx/Dockerfile
+    restart: always
+    ports:
+      - "80:80"
+    volumes:
+      - ../server/media/:/static/img
+
   backend:
     build:
       context: ../backend/
@@ -7,7 +17,7 @@ services:
     ports:
       - "127.0.0.1:12345:80"
     environment:
-      APP_PHOTO_BASE_URL: "http://localhost/static"
+      APP_PHOTO_BASE_URL: "/img"
       APP_PHOTO_PATH_MAIN: "/server/media"
       APP_PHOTO_PATH_TEMP: "/server/temp"
       APP_SWAGGER_CONF_URL: "/docs/openapi.json"
@@ -17,6 +27,9 @@ services:
       DB_PORT: "5432"
       DB_USER_NAME: "postgres"
       DB_USER_PASSWORD: "postgres"
+    volumes:
+      - ../server/media/:/server/media
+      - ../server/temp/:/server/temp
 
   postgresql_db:
     build:
