--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,7 +23,7 @@ server {
         root /static/;
     }
 
-    location = /__md_file {
+    location = /_render/md {
         internal;
         allow all;
         add_header 'Vary' 'Accept';
@@ -33,7 +33,7 @@ server {
     }
 
     location ~* /(?<path>(.*\.md)) {
-        error_page 418 = /__md_file;
+        error_page 418 = /_render/md;
         add_header 'Vary' 'Accept';
 
         if (!-f $request_filename) {
