--- a/nginx/balance_nginx.conf
+++ b/nginx/balance_nginx.conf
@@ -1,4 +1,6 @@
 
+proxy_cache_path /etc/nginx/proxy_cache levels=1:2 keys_zone=app_cache:15m max_size=1G;
+
 upstream app_get_backend_instances {
     server backend:80     weight=2;
     server backend_ro1:80 weight=1;
@@ -17,7 +19,23 @@ map $request_method $backend_target {
 server {
     listen 80;
 
+    more_clear_headers Server;
+    more_set_headers 'Server: Rent Market';
+
+    proxy_cache app_cache;
+    proxy_cache_key $scheme$proxy_host$request_uri;
+    proxy_cache_methods GET;
+    proxy_cache_lock on;
+    proxy_cache_valid any 10m;
+
+    add_header X-Proxy-Cache $upstream_cache_status always;
+
+    gzip on;
+    gzip_disable "msie6";
+    gzip_types text/plain text/css application/json application/x-javascript text/javascript application/javascript image/svg+xml;
+
     location /api/v1/ {
+        proxy_no_cache 1;
         rewrite /api/v1/(.*) /$1 break;
         proxy_pass http://$backend_target;
         proxy_set_header Host $host;
