Add nginx workers and server log

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,6 +9,7 @@ RUN go mod download
 ADD application/ /go/application/
 ADD builders/ /go/builders
 ADD constructors/ /go/constructors
+ADD logger/ /go/logger
 ADD internal/ /go/internal/
 ADD server/ /go/server/
 ADD cmd/ /go/cmd/
