--- a/nginx/main.conf
+++ b/nginx/main.conf
@@ -1,6 +1,10 @@
 
 user nginx;
-events {}
+events {
+    worker_connections 1024;
+}
+
+worker_processes 5;
 
 http {
     include       mime.types;
