--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -42,6 +42,8 @@ services:
       DB_PORT: "5432"
       DB_USER_NAME: "postgres"
       DB_USER_PASSWORD: "postgres"
+      GIN_MODE: "release"
+      LOGGER_TYPE: "stderr"
     volumes:
       - ../server/media/:/server/media
       - ../server/temp/:/server/temp
@@ -66,6 +68,8 @@ services:
       DB_PORT: "5432"
       DB_USER_NAME: "reader"
       DB_USER_PASSWORD: "reader"
+      GIN_MODE: "release"
+      LOGGER_TYPE: "stderr"
 
   backend_ro2:
     build:
@@ -86,6 +90,8 @@ services:
       DB_PORT: "5432"
       DB_USER_NAME: "reader"
       DB_USER_PASSWORD: "reader"
+      GIN_MODE: "release"
+      LOGGER_TYPE: "stderr"
 ###############################################################################
 
   postgresql_db:
@@ -162,6 +168,8 @@ services:
       DB_PORT: "5432"
       DB_USER_NAME: "reader"
       DB_USER_PASSWORD: "reader"
+      GIN_MODE: "release"
+      LOGGER_TYPE: "stderr"
     volumes:
       - ../server/media/:/server/media
       - ../server/temp/:/server/temp
