Add separate docker setup

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ../server/media/:/static/img
+      - ${SERVER_PHOTO_PATH}:/static/img
       - /etc/localtime:/etc/localtime:ro
 
   backend:
@@ -34,21 +34,21 @@ services:
     ports:
       - "127.0.0.1:12345:80"
     environment:
-      APP_PHOTO_BASE_URL: "/img"
-      APP_PHOTO_PATH_MAIN: "/server/media"
-      APP_PHOTO_PATH_TEMP: "/server/temp"
-      APP_SWAGGER_CONF_URL: "/docs/openapi.json"
-      DB_AUTH_NAME: "authentication"
-      DB_MAIN_NAME: "rent_market"
-      DB_HOST: "postgresql_db"
-      DB_PORT: "5432"
-      DB_USER_NAME: "postgres"
-      DB_USER_PASSWORD: "postgres"
-      GIN_MODE: "release"
-      LOGGER_TYPE: "stderr"
+      APP_PHOTO_BASE_URL: ${PHOTO_BASE_URL}
+      APP_PHOTO_PATH_MAIN: /server/media
+      APP_PHOTO_PATH_TEMP: /server/temp
+      APP_SWAGGER_CONF_URL: ${SWAGGER_CONF}
+      DB_AUTH_NAME: ${DB_AUTH_NAME}
+      DB_MAIN_NAME: ${DB_MAIN_NAME}
+      DB_HOST: postgresql_db
+      DB_PORT: 5432
+      DB_USER_NAME: ${DB_USER}
+      DB_USER_PASSWORD: ${DB_PASSWORD}
+      GIN_MODE: release
+      LOGGER_TYPE: ${LOGGER_TYPE}
     volumes:
-      - ../server/media/:/server/media
-      - ../server/temp/:/server/temp
+      - ${SERVER_PHOTO_PATH}:/server/media
+      - ${SERVER_TEMP_PHOTO_PATH}:/server/temp
       - /etc/localtime:/etc/localtime:ro
 
 ######## RO Instances #########################################################
@@ -64,16 +64,16 @@ services:
     ports:
       - "127.0.0.1:12346:80"
     environment:
-      APP_PHOTO_BASE_URL: "/img"
-      APP_SWAGGER_CONF_URL: "/docs/openapi.json"
-      DB_AUTH_NAME: "authentication"
-      DB_MAIN_NAME: "rent_market"
-      DB_HOST: "postgresql_db"
-      DB_PORT: "5432"
-      DB_USER_NAME: "reader"
-      DB_USER_PASSWORD: "reader"
-      GIN_MODE: "release"
-      LOGGER_TYPE: "stderr"
+      APP_PHOTO_BASE_URL: ${PHOTO_BASE_URL}
+      APP_SWAGGER_CONF_URL: ${SWAGGER_CONF}
+      DB_AUTH_NAME: ${DB_AUTH_NAME}
+      DB_MAIN_NAME: ${DB_MAIN_NAME}
+      DB_HOST: postgresql_db
+      DB_PORT: 5432
+      DB_USER_NAME: ${DB_RO_USER}
+      DB_USER_PASSWORD: ${DB_RO_PASSWORD}
+      GIN_MODE: release
+      LOGGER_TYPE: ${LOGGER_TYPE}
     volumes:
       - /etc/localtime:/etc/localtime:ro
 
@@ -89,16 +89,16 @@ services:
     ports:
       - "127.0.0.1:12347:80"
     environment:
-      APP_PHOTO_BASE_URL: "/img"
-      APP_SWAGGER_CONF_URL: "/docs/openapi.json"
-      DB_AUTH_NAME: "authentication"
-      DB_MAIN_NAME: "rent_market"
-      DB_HOST: "postgresql_db"
-      DB_PORT: "5432"
-      DB_USER_NAME: "reader"
-      DB_USER_PASSWORD: "reader"
-      GIN_MODE: "release"
-      LOGGER_TYPE: "stderr"
+      APP_PHOTO_BASE_URL: ${PHOTO_BASE_URL}
+      APP_SWAGGER_CONF_URL: ${SWAGGER_CONF}
+      DB_AUTH_NAME: ${DB_AUTH_NAME}
+      DB_MAIN_NAME: ${DB_MAIN_NAME}
+      DB_HOST: postgresql_db
+      DB_PORT: 5432
+      DB_USER_NAME: ${DB_RO_USER}
+      DB_USER_PASSWORD: ${DB_RO_PASSWORD}
+      GIN_MODE: release
+      LOGGER_TYPE: ${LOGGER_TYPE}
     volumes:
       - /etc/localtime:/etc/localtime:ro
 
@@ -115,9 +115,9 @@ services:
       TASK: unit_tests
       TEST_DB_HOST: test_db
       TEST_DB_PORT: 5432
-      TEST_DB_NAME: rent_market
-      TEST_DB_USERNAME: postgres
-      TEST_DB_PASSWORD: postgres
+      TEST_DB_NAME: ${DB_MAIN_NAME}
+      TEST_DB_USERNAME: ${DB_USER}
+      TEST_DB_PASSWORD: ${DB_PASSWORD}
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ../backend/allure-report/allure-results/:/go/allure-report/allure-results/
@@ -128,10 +128,11 @@ services:
       context: ../scripts/psql/.
     restart: always
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_HOST_AUTH_METHOD=scram-sha-256
-      - POSTGRES_INITDB_ARGS=--auth-host=scram-sha-256
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      PGPORT: 5432
+      POSTGRES_HOST_AUTH_METHOD: scram-sha-256
+      POSTGRES_INITDB_ARGS: --auth-host=scram-sha-256
     volumes:
       - /mnt/rent_market:/var/lib/postgresql/data
       - /etc/localtime:/etc/localtime:ro
@@ -153,9 +154,9 @@ services:
       context: ../scripts/psql/.
     restart: always
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - PGPORT=5432
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      PGPORT: 5432
     volumes:
       - /etc/localtime:/etc/localtime:ro
     healthcheck:
@@ -172,8 +173,8 @@ services:
         condition: service_healthy
         restart: true
     environment:
-      - PGADMIN_DEFAULT_EMAIL=admin@domain.org
-      - PGADMIN_DEFAULT_PASSWORD=psswd
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_USER}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
     volumes:
       - ./pgadmin/:/var/lib/pgadmin
       - /etc/localtime:/etc/localtime:ro
@@ -192,7 +193,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ../server/media/:/static/img
+      - ${SERVER_PHOTO_PATH}:/static/img
       - /etc/localtime:/etc/localtime:ro
 
   mirror_backend:
@@ -207,21 +208,21 @@ services:
     ports:
       - "127.0.0.1:12344:80"
     environment:
-      APP_PHOTO_BASE_URL: "/img"
-      APP_PHOTO_PATH_MAIN: "/server/media"
-      APP_PHOTO_PATH_TEMP: "/server/temp"
-      APP_SWAGGER_CONF_URL: "/docs/openapi.json"
-      DB_AUTH_NAME: "authentication"
-      DB_MAIN_NAME: "rent_market"
-      DB_HOST: "mirror_postgresql_db"
-      DB_PORT: "5432"
-      DB_USER_NAME: "reader"
-      DB_USER_PASSWORD: "reader"
-      GIN_MODE: "release"
-      LOGGER_TYPE: "stderr"
+      APP_PHOTO_BASE_URL: ${PHOTO_BASE_URL}
+      APP_PHOTO_PATH_MAIN: /server/media
+      APP_PHOTO_PATH_TEMP: /server/temp
+      APP_SWAGGER_CONF_URL: ${SWAGGER_CONF}
+      DB_AUTH_NAME: ${DB_AUTH_NAME}
+      DB_MAIN_NAME: ${DB_MAIN_NAME}
+      DB_HOST: mirror_postgresql_db
+      DB_PORT: 5432
+      DB_USER_NAME: ${DB_USER}
+      DB_USER_PASSWORD: ${DB_PASSWORD}
+      GIN_MODE: release
+      LOGGER_TYPE: ${LOGGER_TYPE}
     volumes:
-      - ../server/media/:/server/media
-      - ../server/temp/:/server/temp
+      - ${SERVER_PHOTO_PATH}:/server/media
+      - ${SERVER_TEMP_PHOTO_PATH}:/server/temp
       - /etc/localtime:/etc/localtime:ro
 
   mirror_postgresql_db:
@@ -234,8 +235,9 @@ services:
         condition: service_healthy
         restart: true
     environment:
-      - PGUSER=replicator
-      - PGPASSWORD=replicator
+      PGUSER: ${DB_REPLICA_USER}
+      PGPASSWORD: ${DB_REPLICA_PASSWORD}
+      PGPORT: 5432
     volumes:
       - /mnt/rent_market_mirror:/var/lib/postgresql/data
       - /etc/localtime:/etc/localtime:ro
