--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,10 @@ unit-tests:
         - docker compose -f docker/docker-compose.yml --env-file ${env} run backend_unit_tests
     after_script:
         - docker compose -f docker/docker-compose.yml --env-file ${env} down --remove-orphans
+    artifacts:
+      paths:
+        - backend/allure-report/allure-results/
+      expire_in: 1 day
 
 # Integration tests
 #  
