--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ unit-tests:
         - docker compose -f docker/docker-compose.yml --env-file ${env} down --remove-orphans
     artifacts:
       paths:
-        - backend/allure-report/allure-results/
+        - backend/allure-report/allure-results/*
       expire_in: 1 day
 
 # Integration tests
