Add fixtures for integration tests

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -36,6 +36,11 @@ unit_tests:
 	go test $(TEST_FLAGS)  ./internal/logic/services/implementations/... $(PIPE)
 	go test $(TEST_FLAGS) -p 1  ./internal/repository/implementation/... $(PIPE)
 
+.PHONY: integration_tests
+integration_tests:
+	$(MAKE) -C ${ALLURE_OUTPUT_PATH} before
+	go test $(TEST_FLAGS) -p 1  ./tests/integration/defservices/... $(PIPE)
+
 .PHONY: report
 report:
 	$(MAKE) -C ${ALLURE_OUTPUT_PATH} report
