--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -177,6 +177,15 @@ services:
       TEST_DB_AUTH_NAME: ${DB_AUTH_NAME}
       TEST_DB_USERNAME: ${DB_USER}
       TEST_DB_PASSWORD: ${DB_PASSWORD}
+      TEST_2FA_HOST: ${EMAIL_2FA_HOST}
+      TEST_2FA_PORT: ${EMAIL_2FA_PORT}
+      TEST_2FA_SENDER: ${EMAIL_2FA_SENDER}
+      TEST_2FA_SENDER_PASSWORD: ${EMAIL_2FA_SENDER_PASSWORD}
+      TEST_2FA_SENDER_EMAIL: ${EMAIL_2FA_SENDER_EMAIL}
+      TEST_IMAP_PORT: ${TEST_IMAP_PORT}
+      TEST_RECEPIENT_EMAIL: ${TEST_RECEPIENT_EMAIL}
+      TEST_RECEPIENT_USERNAME: ${TEST_RECEPIENT_USERNAME}
+      TEST_RECEPIENT_PASSWORD: ${TEST_RECEPIENT_PASSWORD}
     volumes:
       - /etc/localtime:/etc/localtime:ro
 
