--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,21 +71,10 @@ e2e-tests:
 # BDD E2E tests
 
 build-bdd-e2e-tests:
-    id_tokens:
-      VAULT_ID_TOKEN:
-        aud: $VAULT_SERVER_URL
-    secrets:
-      mailservercrt:
-        token: $VAULT_ID_TOKEN
-        vault:
-          engine:
-            name: kv-v2
-            path: test/email
-          path: crts
-          field: ca
     stage: build
     before_script:
-        - cp ${mailservercrt} ./backend/crts/mailserver.crt
+        - export VAULT_TOKEN="$(vault write -field=token auth/jwt/login role=runner jwt=$CI_JOB_JWT)"
+        - vault kv get -field ca test/email/crts > ./backend/crts/mailserver.crt
         - docker compose -f docker/docker-compose.yml --env-file ${env} down --remove-orphans
     script:
         - docker compose -f docker/docker-compose.yml --env-file ${env} build backend_bdd_e2e_tests test_db
@@ -97,7 +86,9 @@ bdd-e2e-tests:
     before_script:
         - docker compose -f docker/docker-compose.yml --env-file ${env} down --remove-orphans
     script:
-        - docker compose -f docker/docker-compose.yml --env-file ${env} run backend_bdd_e2e_tests
+        - export VAULT_TOKEN="$(vault write -field=token auth/jwt/login role=runner jwt=$CI_JOB_JWT)" && \
+          && export $(./scripts/get-email-credentials.sh | xargs) \
+          && docker compose -f docker/docker-compose.yml --env-file ${env} --env-file cenv run backend_bdd_e2e_tests
     after_script:
         - docker compose -f docker/docker-compose.yml --env-file ${env} down --remove-orphans
 
