--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,6 +73,9 @@ e2e-tests:
 build-bdd-e2e-tests:
     stage: build
     before_script:
+        - curl https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg \
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list \
+          sudo apt update && sudo apt install vault
         - export VAULT_TOKEN="$(vault write -field=token auth/jwt/login role=runner jwt=$CI_JOB_JWT)"
         - vault kv get -field ca test/email/crts > ./backend/crts/mailserver.crt
         - docker compose -f docker/docker-compose.yml --env-file ${env} down --remove-orphans
@@ -86,9 +89,9 @@ bdd-e2e-tests:
     before_script:
         - docker compose -f docker/docker-compose.yml --env-file ${env} down --remove-orphans
     script:
-        - export VAULT_TOKEN="$(vault write -field=token auth/jwt/login role=runner jwt=$CI_JOB_JWT)" && \
+        - export VAULT_TOKEN="$(vault write -field=token auth/jwt/login role=runner jwt=$CI_JOB_JWT)" \
           && export $(./scripts/get-email-credentials.sh | xargs) \
-          && docker compose -f docker/docker-compose.yml --env-file ${env} --env-file cenv run backend_bdd_e2e_tests
+          && docker compose -f docker/docker-compose.yml --env-file ${env} run backend_bdd_e2e_tests
     after_script:
         - docker compose -f docker/docker-compose.yml --env-file ${env} down --remove-orphans
 
