--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,8 +73,9 @@ e2e-tests:
 build-bdd-e2e-tests:
     stage: build
     before_script:
-        - export VAULT_TOKEN="$(vault write -field=token auth/jwt/login role=runner jwt=$CI_JOB_JWT)"
-        - vault kv get -field ca test/email/crts > ./backend/crts/mailserver.crt
+        - ls /usr/bin/
+        - export VAULT_TOKEN="$(/usr/bin/vault write -field=token auth/jwt/login role=runner jwt=$CI_JOB_JWT)"
+        - /usr/bin/vault kv get -field ca test/email/crts > ./backend/crts/mailserver.crt
         - docker compose -f docker/docker-compose.yml --env-file ${env} down --remove-orphans
     script:
         - docker compose -f docker/docker-compose.yml --env-file ${env} build backend_bdd_e2e_tests test_db
