--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,8 +88,9 @@ bdd-e2e-tests:
         - docker compose -f docker/docker-compose.yml --env-file ${env} down --remove-orphans
     script:
         - source ./scripts/vault-api.sh
-        - export VAULT_TOKEN="$(login_jwt $CI_JOB_JWT)" \
-          && export $(./scripts/get-email-credentials.sh | xargs) \
+        - export VAULT_TOKEN="$(login_jwt $CI_JOB_JWT)"
+        - ./scripts/get-email-credentials.sh
+        - export $(./scripts/get-email-credentials.sh | xargs) \
           && docker compose -f docker/docker-compose.yml --env-file ${env} run backend_bdd_e2e_tests
     after_script:
         - docker compose -f docker/docker-compose.yml --env-file ${env} down --remove-orphans
