Add tracer to e2e test and benchmark

--- a/.env/env.template
+++ b/.env/env.template
@@ -20,3 +20,6 @@ DB_REPLICA_PASSWORD=example
 PGADMIN_USER=example
 PGADMIN_PASSWORD=example
 
+TRACER_ENDPOINT=example:example
+METER_ENDPOINT=example:example
+
